# gl-basic-renderer

./: CMakeLists.txt
resources/shaders/: default.vert  texture.frag
src/: framebuffer.cpp  framebuffer.hpp  gl-basic.hpp  postprocessor.cpp  postprocessor.hpp  rendering_system.cpp  rendering_system.hpp
src/shader/: all.hpp  shader.cpp  shader.hpp  utility.hpp
src/shader/geometry/: circle.cpp  circle.hpp  circle_filled.cpp  circle_filled.hpp  geometry.hpp  line.cpp  line.hpp  lines.cpp  lines.hpp  polygon.cpp  polygon.hpp  polygon_filled.cpp  polygon_filled.hpp  texture_quad.cpp  texture_quad.hpp
src/texture/: all.hpp  texture.cpp  texture.hpp
